# SkyClimb

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ProjectGen.py  README.md  plugin.cpp  vcpkg.json
cmake/: Version.h.in  common.cmake  sourcelist.cmake
src/: PCH.h  plugin.cpp
